# pono

./: .gitignore  .watch.yaml  Cargo.toml  Makefile  README.md  flake.nix  packages.nix  pono.toml  shell.nix  slot.toml  todo.txt
.github/workflows/: on-push-nixbuild.yml  on-push.yml  on-release.yml  on-schedule-checks.yml
docs/: HOOKS.md
examples/: basic.toml
examples/configs/: invalid-missing-packages.toml  invalid-package.toml  invalid-target-is-not-link.toml  using-environment-variables.toml
examples/from/: zshrc
nix/: pono-develop.nix  pono-local.nix  pono-nightly.nix  pono.nix  slot-nightly.nix  slot.nix
scripts/: build-artifacts.sh  bump-cargohash  bump-nix  ci.sh  git-hooks-checks  nix-bump-nightly
src/: main.rs
tests/: advanced_usage.rs  basic_commands.rs  validations.rs
tests/common/: lib.rs
