[package]
name = "pono"
version = "0.2.0"
edition = "2021"

authors = ["Cristian Oliveira <public+crateio@cristianoliveira.com>"]
description = "pono - pack and organize symlinks once"
license = "MIT"
repository = "https://github.com/cristianoliveira/pono"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
shellexpand = "3.1.0"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
